# scalacheck

./: .classpath  .git-blame-ignore-revs  .gitignore  .project  .scalafmt.conf  .travis.yml  CHANGELOG.markdown  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.markdown  LICENSE  README  README.markdown  README.md  RELEASE  RELEASE.markdown  TODO  build.sbt  build.xml  documentation.html  download.html  flake.nix  index.html  push-site.sh  release.sh  releases.html  sbt  sbt.cmd  scalacheck-web.nix  scalacheck.nix  test.scala  test.sh  xsbt
.github/workflows/: bench.yml  ci.yml  (+4 more)
bench/: README.markdown
css/: main.css  syntax.css
doc/: UserGuide.md
docs/: api.md  directory.conf  download.md  main.md  old_releases.md  resources.md  sources.md  userguide.md
download/: 1.10.0.html  1.10.1.html  1.11.0.html  1.11.1.html  1.11.3.html  1.11.4.html  1.11.5.html  1.11.6.html  1.12.0.html  1.12.1.html  1.12.2.html  1.12.4.html  1.12.6.html  1.13.0.html  1.13.1.html  1.13.2.html  1.13.3.html  1.13.4.html  1.13.5.html  1.14.0.html  1.8.html  1.9.html
examples/: README.markdown
hakyll/: Main.hs  default.nix  sc-hakyll.cabal
nix/: default.nix
project/: CodeGenerator.scala  CustomHeaderPlugin.scala  MimaSettings.scala  build.properties  codegen.scala  plugin.sbt  plugins.sbt  versions.scala
scalafix/: build.sbt  readme.md
src/: CNAME  documentation.markdown  download.markdown  index.markdown  releases.markdown
tools/: codegen.scala  codegen.sh  travis-deploy.sh  travis-script.sh
website/: documentation.html  download.html  index-2.html  index.html  releases.html
(+314 files in other folders)
